@@ -1,3 +1,6 @@
+MJ 28/08/05
+- Fixed a bug in Scheduler: now all times are realy long
+
 MJ 21/08/05
 - some minor documentation fixes
 - CDScheduler can now accept a list of protocols instead of only one
